--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -44,6 +44,7 @@
 @import 'cmps/popovers/edit-pop-over';
 @import 'cmps/card-details-cmps/comment-add';
 @import 'cmps/sticker';
+@import 'cmps/background-menu';
 
 // Components
 @import 'cmps/app-header';
