--- a/src/assets/styles/views/_board-app.scss
+++ b/src/assets/styles/views/_board-app.scss
@@ -1,7 +1,7 @@
 .main-board {
   height: calc(100vh - 40px); // check responsive
-
-  .on-grab-drag-drop{
-    transform: rotate(45deg);
-  }
 }
+
+// .on-grab-drag-drop {
+//   transform: rotate(45deg);
+// }
