--- a/src/assets/styles/cmps/card-preview/_card-preview.scss
+++ b/src/assets/styles/cmps/card-preview/_card-preview.scss
@@ -4,6 +4,7 @@
   &:hover {
     filter: brightness(95%);
     .card-preview-edit-btn {
+      z-index: 2;
       background-color: rgba(#f4f5f7, 0.8);
       opacity: 1;
     }
