--- a/src/assets/styles/cmps/popovers/_create-board-pop-over.scss
+++ b/src/assets/styles/cmps/popovers/_create-board-pop-over.scss
@@ -72,14 +72,20 @@
       width: 100%;
       outline: none;
       border: none;
+      text-align: center;
       box-shadow: inset 0 0 0 2px #dfe1e6;
       background-color: #fafbfc;
       border-radius: $borderRad1;
-      margin-bottom: 12px;
-      padding: 8px 8px 8px 33px;
+      margin-bottom: 14px;
+      padding: 8px 8px 8px;
+      width: 100%;
       transition-property: background-color, border-color, box-shadow;
       transition-duration: 85ms;
       transition-timing-function: ease;
+      input[type='text'] {
+        background: #fafbfc;
+        width: 100%;
+      }
       &:focus {
         box-shadow: inset 0 0 0 2px #0079bf;
       }
