--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -38,6 +38,7 @@
 @import 'cmps/card-details-cmps/card-details-actions';
 @import 'cmps/popovers/label-popover-preview';
 @import 'cmps/popovers/pop-over';
+@import 'cmps/popovers/move-pop-over';
 @import 'cmps/popovers/cover-pop-over';
 @import 'cmps/popovers/create-board-pop-over';
 @import 'cmps/popovers/popover-user';
@@ -68,6 +69,7 @@
 @import 'cmps/card-details-cmps/card-labels';
 @import 'cmps/sidenav-right';
 @import 'cmps/card-preview';
+@import 'cmps/card-preview/card-preview-comments';
 @import 'cmps/chat.scss';
 //Components card-details-cmps
 @import 'cmps/card-details-cmps/card-details-activity-list';
