--- a/src/assets/styles/cmps/card-details-cmps/_card-details-actions.scss
+++ b/src/assets/styles/cmps/card-details-cmps/_card-details-actions.scss
@@ -27,6 +27,18 @@
   color: #172b4d;
 }
 
+.suggested h4 {
+  color: #5e6c84;
+  font-size: 12px;
+  font-weight: 500;
+  letter-spacing: 0.04em;
+  line-height: 16px;
+  line-height: 20px;
+  margin-bottom: -4px;
+  margin-top: 16px;
+  text-transform: uppercase;
+}
+
 .add-section h4 {
   color: #5e6c84;
   font-size: 12px;
